<resources>
    <string name="app_name">DynamicTableAndLoginScreen</string>
    <string name="water_resource_name">Water Resource Name</string>
    <string name="water_location">Location</string>
    <string name="water_resource_type">Type</string>
    <string name="addResource">Add</string>
    <string name="waterResource">Water Resource Name</string>
    <string name="waterResourceLocation">Location</string>
    <string name="waterResourceType">Type</string>
    <string name="scroll_view_description">A scrollable view containing water resource details</string>
    <string name="add">Add</string>
</resources>